# VLCApp

./: README.md
src/VLCApp/: CMakeLists.txt
src/VLCApp/VLCApp/: CMakeLists.txt  VLCApp.cpp  VLCApp.h
src/VLCApp/docs/: ReadMe.txt  config.json
